--- a/eda_notebooks/eda-split-2.ipynb
+++ b/eda_notebooks/eda-split-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -213,6 +213,107 @@
    "outputs": [],
    "source": [
     "sample.to_csv('../../data/sample.csv') #sample dataset to use for building model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../../data/all_wine_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 128137 entries, 0 to 128136\n",
+      "Data columns (total 11 columns):\n",
+      "Unnamed: 0     128137 non-null int64\n",
+      "country        128081 non-null object\n",
+      "description    128137 non-null object\n",
+      "designation    89997 non-null object\n",
+      "points         128137 non-null int64\n",
+      "price          118285 non-null float64\n",
+      "province       128081 non-null object\n",
+      "region_1       107049 non-null object\n",
+      "region_2       51680 non-null object\n",
+      "variety        128137 non-null object\n",
+      "winery         128137 non-null object\n",
+      "dtypes: float64(1), int64(2), object(8)\n",
+      "memory usage: 10.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1 = df[np.isfinite(df['price'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 118285 entries, 0 to 128136\n",
+      "Data columns (total 11 columns):\n",
+      "Unnamed: 0     118285 non-null int64\n",
+      "country        118231 non-null object\n",
+      "description    118285 non-null object\n",
+      "designation    82776 non-null object\n",
+      "points         118285 non-null int64\n",
+      "price          118285 non-null float64\n",
+      "province       118231 non-null object\n",
+      "region_1       98879 non-null object\n",
+      "region_2       51411 non-null object\n",
+      "variety        118285 non-null object\n",
+      "winery         118285 non-null object\n",
+      "dtypes: float64(1), int64(2), object(8)\n",
+      "memory usage: 10.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df1.to_csv('../../data/price_wine_data.csv')"
    ]
   }
  ],
